@@ -1,8 +1,12 @@
-2024-11-05  Charlie Zender  <zender@uci.edu>
+2024-11-06  Charlie Zender  <zender@uci.edu>
 
 	* NCO 5.3.0-alpha04 release procedure:
 	cd ~/nco;git commit -a -m 'Version 5.3.0-alpha04: Nail Biter';git push
 	git tag -a 5.3.0-alpha04 -m 'fxm';git push --tags
+
+	* ncremap squelch SGS normalization WARNING due to landfrac in EAMxx files
+
+2024-11-05  Charlie Zender  <zender@uci.edu>
 
 	* NCO 5.3.0-alpha03 release procedure:
 	cd ~/nco;git commit -a -m 'Version 5.3.0-alpha03: Slow Horses';git push
